--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -495,8 +495,8 @@ We have:
 $$
 \begin{aligned}
 \pof{x \given y} &= \qof{x \given y} \\
-\overset{\text{ass. $$\pof{y} \not= 0$$}}{\iff} \frac{\fof{y \given x}\pof{x}}{\pof{y}} &= \frac{\fof{y \given x}\qof{x}}{\qof{y}} \\
-\overset{\text{ass. $$\fof{y \given x}\not= 0$$}}{\iff} \frac{\pof{x}}{\pof{y}} &= \frac{\qof{x}}{\qof{y}} \\
+\overset{\text{ass. $\pof{y} \not= 0$}}{\iff} \frac{\fof{y \given x}\pof{x}}{\pof{y}} &= \frac{\fof{y \given x}\qof{x}}{\qof{y}} \\
+\overset{\text{ass. $\fof{y \given x}\not= 0$}}{\iff} \frac{\pof{x}}{\pof{y}} &= \frac{\qof{x}}{\qof{y}} \\
 \iff \pof{x} &= \frac{\pof{y}}{\qof{y}} \, \qof{x}.
 \end{aligned}
 $$
@@ -691,14 +691,14 @@ Function-space variational inference (FSVI) side-steps some of these restriction
 
 The DPI states that processing data stochastically can only reduce information. More formally:
 
-<aside class="box-note" markdown="1">
-Consider two distributions $\qof{\W}$ and $\pof{\W}$ over a random variable $\W$. Let $Y = \fof{\W}$ be a stochastic mapping from $\W$ to $Y$. Then the DPI states:
+<aside class="l-body box-note" markdown="1">
+Consider two distributions $$\qof{\W}$$ and $$\pof{\W}$$ over a random variable $$\W$$. Let $$Y = \fof{\W}$$ be a stochastic mapping from $$\W$$ to $$Y$$. Then the DPI states:
 
 $$\Kale{\qof{\W}}{\pof{\W}} \ge \Kale{\qof{Y}}{\pof{Y}}.$$
 
 </aside>
 
-That is, the KL divergence (*🥬 divergence*) between $\qof{Y}$ and $\pof{Y}$ cannot be larger than between the original $\qof{\W}$ and $\pof{\W}$. Intuitively, the stochastic mapping $\opf$ induces a bottleneck that reduces how well we can distinguish between $\opp$ and $\opq$. Finally we have equality when $\Kale{\qof{\W \given Y}}{\pof{\W \given Y}} = 0$. See the [first part of this two-part series](https://blog.blackhc.net/2023/08/sdpi_fsvi/) for more details.
+That is, the KL divergence (*🥬 divergence*) between $$\qof{Y}$$ and $$\pof{Y}$$ cannot be larger than between the original $$\qof{\W}$$ and $$\pof{\W}$$. Intuitively, the stochastic mapping $$\opf$$ induces a bottleneck that reduces how well we can distinguish between $$\opp$$ and $$\opq$$. Finally we have equality when $$\Kale{\qof{\W \given Y}}{\pof{\W \given Y}} = 0$$. See the [first part of this two-part series](https://blog.blackhc.net/2023/08/sdpi_fsvi/) for more details.
 
 The paper "*Understanding Variational Inference in Function-Space*" by Burt et al.\ (2021)[^Burt] succinctly summarizes the DPI as follows:
 
@@ -712,17 +712,17 @@ The data processing inequality states that if two random variables are transform
 
 In the following, I assume a classification task with cross-entropy loss. This post uses the following notation:
 
-- $\y$ is the label,
-- $\x$ is the input,
-- $\qof{\y \given \x}$ is the predictive distribution we want to learn,
-- $\pdata{\y \given \x}$ is the data distribution, and
-- $C$ is the number of classes.
+- $$\y$$ is the label,
+- $$\x$$ is the input,
+- $$\qof{\y \given \x}$$ is the predictive distribution we want to learn,
+- $$\pdata{\y \given \x}$$ is the data distribution, and
+- $$C$$ is the number of classes.
 
 The probabilistic model is as usual:
 
 $$\pof{\y, \w \given \x} = \pof{\y \given \x, \w} \, \pof{\w}.$$
 
-Note that I drop conditioning on $\x$ for simplicity, and also note, that I use upper-case letters for random variables, I'm taking an expectation over in some form, e.g.\ the 🥬 divergence, and lower-case letters when I'm referring to specific observations or values that could be substituted (with the exception of $\Dany$).
+Note that I drop conditioning on $$\x$$ for simplicity, and also note, that I use upper-case letters for random variables, I'm taking an expectation over in some form, e.g.\ the 🥬 divergence, and lower-case letters when I'm referring to specific observations or values that could be substituted (with the exception of $$\Dany$$).
 
 
 ## Chain Rule of the 🥬 Divergence & DPI
@@ -746,7 +746,7 @@ $$
 
 # Function-Space Variational Inference
 
-The DPI has an intriguing connection to FSVI. Let's say we want to approximate a Bayesian posterior $\pof{\w \given \Dany}$ with a variational distribution $\qof{\w}$. In standard VI, we would minimize $\Kale{\qof{\W}}{\pof{\W \given \Dany}}$ to match the variational distribution to the Bayesian posterior. Specifically:
+The DPI has an intriguing connection to FSVI. Let's say we want to approximate a Bayesian posterior $$\pof{\w \given \Dany}$$ with a variational distribution $$\qof{\w}$$. In standard VI, we would minimize $$\Kale{\qof{\W}}{\pof{\W \given \Dany}}$$ to match the variational distribution to the Bayesian posterior. Specifically:
 
 $$
 \begin{align}
@@ -755,7 +755,7 @@ $$
 \end{align}
 $$
 
-This derives an information-theoretic evidence upper bound on the information content $-\log \pof{\Dany}$ of the data $\Dany$ under the variational distribution $\qof{\w}$.
+This derives an information-theoretic evidence upper bound on the information content $$-\log \pof{\Dany}$$ of the data $$\Dany$$ under the variational distribution $$\qof{\w}$$.
 In other more probability-theory inspired literature, the negative of this bound is called the *evidence lower bound (ELBO)*, which we maximize.
 
 In FSVI (with a caveat I detail below), we apply the DPI to the prior 🥬 divergence term and obtain a functional version of the evidence bound:
@@ -766,7 +766,7 @@ $$
 \end{align}
 $$
 
-where $\Y... \given \x...$ are (finite or infinite) sets of samples. That is, we do not only optimize marginal distributions but also joint distributions[^joint-vs-marginal].
+where $$\Y... \given \x...$$ are (finite or infinite) sets of samples. That is, we do not only optimize marginal distributions but also joint distributions[^joint-vs-marginal].
 
 The resulting objective
 
@@ -789,13 +789,13 @@ is equal to the (negative) *functional ELBO (fELBO)* in "*Functional variational
     * Wang, Sun, & Grosse (2021). Beyond marginal uncertainty: how accurately can Bayesian regression models estimate posterior predictive correlations? International Conference on Artificial Intelligence and Statistics.
 
 
-## Choosing $\x...$
+## Choosing $$\x...$$
 
-One important detail is the question of how to choose the $\x...$:
+One important detail is the question of how to choose the $$\x...$$:
 
 Ideally, we want to choose them such that the DPI inequality is as tight as possible.
 
-Given the chain inequality, it is obvious that the larger the set $\x...$, the tighter the inequality will be. 
+Given the chain inequality, it is obvious that the larger the set $$\x...$$, the tighter the inequality will be. 
 Hence, if we could choose an infinite set of points well, we might be able to get the tightest possible inequality. 
 However, this might not be tractable and in practice, it is often not.
 
@@ -808,13 +808,13 @@ We will discuss the tightness of the inequality and the implications in the data
 
 Focusing on the most important aspect of FSVI, we observe:
 
-<aside class="box-important" markdown="1">
-Instead of a parameter prior (term) $\Kale{\qof{\W}}{\pof{\W}}$, we have a functional or *predictive* prior (term) $\Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}$.
+<aside class="l-body box-important" markdown="1">
+Instead of a parameter prior (term) $$\Kale{\qof{\W}}{\pof{\W}}$$, we have a functional or *predictive* prior (term) $$\Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}$$.
 </aside>
 
 ## Continual Learning 
 
-When we directly optimize the 🥬 divergence on the finite input dataset, for example, we align $\opq$ with the prior of $\opp$ where it matters most: on the predictions of the observed data.
+When we directly optimize the 🥬 divergence on the finite input dataset, for example, we align $$\opq$$ with the prior of $$\opp$$ where it matters most: on the predictions of the observed data.
 
 This is of particular interest in continual learning, where the prior for the next task is chosen to be the posterior from the previous task. In this case, the functional ELBO can be used to approximate the posterior of the previous model while incorporating new data.
 
@@ -825,10 +825,10 @@ For two great papers that are very readable and provide further insights, see "*
 
 ## Comparison to FSVI in the literature
 
-<aside class="box-error" markdown="1">
-An important detail (thanks to [Freddie Bickford Smith](https://fbickfordsmith.com/) for pointing this out) is that in above FSVI papers, the DPI is applied to the *logits* not the *probabilities*. That is we have a distribution over logits, which adds an extra layer of uncertainty. Unlike the class probabilities, which we can also obtain from a deterministic neural network, thanks to the semantic interpretation of the outputs as distribution $\pof{\y \given \x, \w}$, a deterministic neural network only provides us with deterministic logits and not a distribution over them. Only a (more) Bayesian approach can provide this.
+<aside class="l-body box-error" markdown="1">
+An important detail (thanks to [Freddie Bickford Smith](https://fbickfordsmith.com/) for pointing this out) is that in above FSVI papers, the DPI is applied to the *logits* not the *probabilities*. That is we have a distribution over logits, which adds an extra layer of uncertainty. Unlike the class probabilities, which we can also obtain from a deterministic neural network, thanks to the semantic interpretation of the outputs as distribution $$\pof{\y \given \x, \w}$$, a deterministic neural network only provides us with deterministic logits and not a distribution over them. Only a (more) Bayesian approach can provide this.
 
-In general, we have the following inequality chain that relates the 🥬 divergence between the logits $\L$, which is a vector unlike $\Y$, and the 🥬 divergence between the output probabilities for $\Y$ to the 🥬 divergence between the parameters $\W$:
+In general, we have the following inequality chain that relates the 🥬 divergence between the logits $$\L$$, which is a vector unlike $$\Y$$, and the 🥬 divergence between the output probabilities for $$\Y$$ to the 🥬 divergence between the parameters $$\W$$:
 
 $$
 \begin{align}
@@ -863,7 +863,7 @@ which is equivalent to minimizing the information-theoretic objective:
 $$
 \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\L... \given \x...}}{\pof{\L... \given \x...}},
 $$
-if we choose the $\x...$ to tighten the DPI inequality as much as possible (i.e.\ choosing the supremum).
+if we choose the $$\x...$$ to tighten the DPI inequality as much as possible (i.e.\ choosing the supremum).
 
 Using the inequality chain from above, we can sandwich their objective between a regular (negative) ELBO and the (negative) functional ELBO, we have derived above:
 
@@ -881,21 +881,21 @@ Conceptually, this explains the derivation of their ELBO objective and also rela
 
 # The Equality Case and Equivalence Classes
 
-When do we have $\Kale{\qof{\W}}{\pof{\W}} = \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}$? And what does it tell us?
-As we have seen in the first part, we have equality in the DPI if and only $\Kale{\qof{\W \given \Y..., \x...}}{\pof{\W \given \Y..., \x...}}=0$.
+When do we have $$\Kale{\qof{\W}}{\pof{\W}} = \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}$$? And what does it tell us?
+As we have seen in the first part, we have equality in the DPI if and only $$\Kale{\qof{\W \given \Y..., \x...}}{\pof{\W \given \Y..., \x...}}=0$$.
 
-Given that we are trying to approximate the Bayesian posterior $\pof{\w \given \Y..., \x...}$ using $\qof{\w}$, this equality condition tells us that we would have to find the exact posterior for equality. 
-Hence, it is unlikely that we will have equality in practice. Thus, this raises the question of what this predictive prior term $\Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}$ provides us with.
+Given that we are trying to approximate the Bayesian posterior $$\pof{\w \given \Y..., \x...}$$ using $$\qof{\w}$$, this equality condition tells us that we would have to find the exact posterior for equality. 
+Hence, it is unlikely that we will have equality in practice. Thus, this raises the question of what this predictive prior term $$\Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}$$ provides us with.
 
 Another way to think about the gap between the two 🥬 divergences is that one is parameter-based and the other one is not:
 Deep neural networks have many parameter symmetries, and it is often possible to permute the weights of a neural network without changing the outputs---for example, in a convolutional neural network, we could swap channels.
  
 The functional 🥬 divergences won't be affected by this as they are parameter-free and do not take into account the parameters of the model but only the predictions. 
-The regular parameter-based 🥬 divergence, however, would be affected by this---depending on the prior $\pof{\w}$.
+The regular parameter-based 🥬 divergence, however, would be affected by this---depending on the prior $$\pof{\w}$$.
 
 If the prior assigns different probability to otherwise equivalent parameters, this obviously changes the parameter posterior, while the outputs are invariant to these changes if the overall assigned probability remains the same.
 
-<aside class="box-important" markdown="1">
+<aside class="l-body box-important" markdown="1">
 A better name for the functional 🥬 divergence and function-space variational inference might be *predictive* 🥬 divergence and *predictive variational inference*. 
 
 To me, functions are an abstract thing, and determining how to assign a prior or even a distribution to them sounds difficult and complex, adding an air of mystique for me, whereas predictions are something we can easily understand and relate to.
@@ -904,16 +904,16 @@ To me, functions are an abstract thing, and determining how to assign a prior or
 ## Equivalence Classes
 
 Unless there are other considerations, it makes sense to use priors that assign the same density to parameters that are equivalent. 
-Hence, for a given function $\fof{\x ; \w}$, which determines the likelihood $\pof{\y \given \x, \w} \triangleq \pof{y \given \fof{\x ; \w}}$, we can define an equivalence relation such that $\w \sim \w'$ if and only if $\fof{\x; \w} = \fof{\x; \w'}$ *for all* $\x$. 
+Hence, for a given function $$\fof{\x ; \w}$$, which determines the likelihood $$\pof{\y \given \x, \w} \triangleq \pof{y \given \fof{\x ; \w}}$$, we can define an equivalence relation such that $$\w \sim \w'$$ if and only if $$\fof{\x; \w} = \fof{\x; \w'}$$ *for all* $$\x$$. 
 This equivalence relation partitions the parameter space into equivalence classes:
 
 $$[\w] \triangleq \{\w' : \fof{x ; \w} = \fof{x ; \w} \quad \forall x \}.$$
 
-Any prior $\pof{\w}$ induces a prior $\hpof{[\w]}$ over the equivalence classes:
+Any prior $$\pof{\w}$$ induces a prior $$\hpof{[\w]}$$ over the equivalence classes:
 
 $$\hpof{[\w]} \triangleq \sum_{\w' \in [\w]} \pof{\w'}.$$
 
----or $\int_{[\w]} \pof{\w'} \, d \w'$ for continuous $\w$---with the corresponding model:
+---or $$\int_{[\w]} \pof{\w'} \, d \w'$$ for continuous $$\w$$---with the corresponding model:
 
 $$
 \begin{aligned}
@@ -922,10 +922,10 @@ $$
 \end{aligned}
 $$
 
-<aside class="box-error" markdown="1">
-Crucially, all of this depends on which $\x$ we consider as input domain. Different domains for $\x$ will induce different equivalence classes. 
+<aside class="l-body box-error" markdown="1">
+Crucially, all of this depends on which $$\x$$ we consider as input domain. Different domains for $$\x$$ will induce different equivalence classes. 
 
-For example, for function families on $\mathbb{R} \to \mathbb{R}$, if we restrict the domain to $\x \in (0, 1)$, the equivalence classes will be different from the domain $\x \in \mathbb{R}$. For $\x \in (0, 1)$, we do not differentiate between functions that behave differently outside this domain. For any $k \ge 1$,
+For example, for function families on $$\mathbb{R} \to \mathbb{R}$$, if we restrict the domain to $$\x \in (0, 1)$$, the equivalence classes will be different from the domain $$\x \in \mathbb{R}$$. For $$\x \in (0, 1)$$, we do not differentiate between functions that behave differently outside this domain. For any $$k \ge 1$$,
 
 $$
 \fof{x} = \begin{cases} 
@@ -934,7 +934,7 @@ x^2 & \text{if } |x| \leq k \\
 \end{cases}
 $$
 
-has the same predictions within the domain $\x \in (0, 1)$ while being different outside of it for different $k$.
+has the same predictions within the domain $$\x \in (0, 1)$$ while being different outside of it for different $$k$$.
 </aside>
 
 
@@ -942,8 +942,8 @@ has the same predictions within the domain $\x \in (0, 1)$ while being different
 
 Importantly, this definition is consistent with Bayesian inference:
 
-<aside class="box-note" markdown="1">
-$[\w]$ commutes with Bayesian inference:
+<aside class="l-body box-note" markdown="1">
+$$[\w]$$ commutes with Bayesian inference:
 
 $$
 \hpof{[\w] \given \Dany} = \sum_{\w' \in [\w]} \pof{\w' \given \Dany}.
@@ -963,7 +963,7 @@ $$
 \end{aligned}
 $$
 
-The last step follows from $\hpof{\Dany}=\pof{\Dany}$:
+The last step follows from $$\hpof{\Dany}=\pof{\Dany}$$:
 
 $$
 \begin{aligned}
@@ -974,20 +974,20 @@ $$
 \end{aligned}
 $$
 
-This also tells us that, for any $\x$ and $\y$, $\pof{\y... \given \x...} = \hpof{\y... \given \x...}$.
+This also tells us that, for any $$\x$$ and $$\y$$, $$\pof{\y... \given \x...} = \hpof{\y... \given \x...}$$.
 
-Given this consistency, we don't have to differentiate between $\hat\opp$ and $\opp$ and can use $\opp$ interchangeably.
-The same holds for $\opq$.
+Given this consistency, we don't have to differentiate between $$\hat\opp$$ and $$\opp$$ and can use $$\opp$$ interchangeably.
+The same holds for $$\opq$$.
 
-<aside class="box-important" markdown="1">
-This is not a special property of the equivalence class mapping but a general property of applying functions to random variables: $[\cdot]$ maps the random variable $\W$ to the transformed random variable $[\W]$, and this mapping commutes with Bayesian inference.
+<aside class="l-body box-important" markdown="1">
+This is not a special property of the equivalence class mapping but a general property of applying functions to random variables: $$[\cdot]$$ maps the random variable $$\W$$ to the transformed random variable $$[\W]$$, and this mapping commutes with Bayesian inference.
 
-Above proof is valid for any function $\fof{\cdot}$ applied to a random variable.
+Above proof is valid for any function $$\fof{\cdot}$$ applied to a random variable.
 </aside>
 
 ## Equality & Symmetries
 
-We can view $[\w]$ as a projection from $\w$ to its equivalence class $[\w]$. The DPI then gives us:
+We can view $$[\w]$$ as a projection from $$\w$$ to its equivalence class $$[\w]$$. The DPI then gives us:
 
 $$
 \Kale{\qof{\W}}{\pof{\W}} \ge \Kale{\qof{[\W]}}{\pof{[\W]}}.
@@ -995,29 +995,29 @@ $$
 
 What does the gap between the two terms tell us? 
 
-<aside class="box-error" markdown="1">
-Intuitively speaking, $\Kale{\qof{[\W]}}{\pof{[\W]}}$ captures the meaningful divergence between approximate and true posterior, while $\Kale{\qof{\W}}{\pof{\W}}$ includes any divergence due to parameter symmetries that has no effect on the predictions, now or later.
+<aside class="l-body box-error" markdown="1">
+Intuitively speaking, $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ captures the meaningful divergence between approximate and true posterior, while $$\Kale{\qof{\W}}{\pof{\W}}$$ includes any divergence due to parameter symmetries that has no effect on the predictions, now or later.
 </aside>
 
 Let's look at a few examples to get a better understanding of this.
 
 1. Trivial Constant Case
 
-Let $\fof{\x ; \w} = 0$ independent of any $f$. Then $[\w] = [\w']$ for any $\w$, $\w'$.
+Let $$\fof{\x ; \w} = 0$$ independent of any $$f$$. Then $$[\w] = [\w']$$ for any $$\w$$, $$\w'$$.
 
-For any approximate distribution $\qof{\w}$, the induced $\Kale{\qof{[\W]}}{\pof{[\W]}}=0$, while $\Kale{\qof{\W}}{\pof{\W}}$ also includes superfluous divergence.
+For any approximate distribution $$\qof{\w}$$, the induced $$\Kale{\qof{[\W]}}{\pof{[\W]}}=0$$, while $$\Kale{\qof{\W}}{\pof{\W}}$$ also includes superfluous divergence.
 
 2. Unused Parameter
 
-Let $\y \given (\w_1, \w_2) = \w_1$ deterministic but independent of $\w_2$. Then $[(\w_1, \w_2)] = [(\w_1, {\w'}_2)]$ for any ${\w'}_2$ and $[(\w_1,*)]\not=[({\w'}_1, *)]$ for any $\w_1 \not= \w'_1$.
+Let $$\y \given (\w_1, \w_2) = \w_1$$ deterministic but independent of $$\w_2$$. Then $$[(\w_1, \w_2)] = [(\w_1, {\w'}_2)]$$ for any $${\w'}_2$$ and $$[(\w_1,*)]\not=[({\w'}_1, *)]$$ for any $$\w_1 \not= \w'_1$$.
 
-Then $\Kale{\qof{[\W]}}{\pof{[\W]}}=\Kale{\qof{\W_1}}{\pof{\W_1}}$ and captures purely the meaningful divergence between approximate and true posterior, while $\Kale{\qof{\W}}{\pof{\W}}$ includes any divergence due to parameter symmetries across all $\w_2$ that has no effect on the predictions.
+Then $$\Kale{\qof{[\W]}}{\pof{[\W]}}=\Kale{\qof{\W_1}}{\pof{\W_1}}$$ and captures purely the meaningful divergence between approximate and true posterior, while $$\Kale{\qof{\W}}{\pof{\W}}$$ includes any divergence due to parameter symmetries across all $$\w_2$$ that has no effect on the predictions.
 
 3. Periodic Parameter Space
 
-Finally, let's assume that the predictions are periodic in some way. That is, e.g.\ $\y = \sin \w$. Obviously, $[\w] = [\w + 2\pi]$ then. 
+Finally, let's assume that the predictions are periodic in some way. That is, e.g.\ $$\y = \sin \w$$. Obviously, $$[\w] = [\w + 2\pi]$$ then. 
 
-Further, let $\pof{\w} = \operatorname{U}(\w; [0,2\pi \, N))$ for some $N$ that determines the number of periods. Then, if we introduce another random variable $K$, that captures which period we are in, we can (again) use the chain rule to write:
+Further, let $$\pof{\w} = \operatorname{U}(\w; [0,2\pi \, N))$$ for some $$N$$ that determines the number of periods. Then, if we introduce another random variable $$K$$, that captures which period we are in, we can (again) use the chain rule to write:
 
 $$
 \begin{aligned}
@@ -1030,16 +1030,16 @@ $$
 
 This follows from the setup of this specific example.
 
-Finally, $\Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}} \le \log N$.
+Finally, $$\Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}} \le \log N$$.
 
-So, if $\opq$ only had support in a single period for example, the difference between $\Kale{\qof{\W}}{\pof{\W}}$ and $\Kale{\qof{[\W]}}{\pof{[\W]}}$ would be $\log N$, capturing the redundancy.
+So, if $$\opq$$ only had support in a single period for example, the difference between $$\Kale{\qof{\W}}{\pof{\W}}$$ and $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ would be $$\log N$$, capturing the redundancy.
 
 ## Predictive Prior
 
 How does the predictive prior term fit into this? The DPI again yields the answer:
 
-<aside class="box-important" markdown="1">
-As the predictions are independent of the parameters, we can map from equivalence classes $[\w]$ to predictions, and the DPI yields:
+<aside class="l-body box-important" markdown="1">
+As the predictions are independent of the parameters, we can map from equivalence classes $$[\w]$$ to predictions, and the DPI yields:
 
 $$
 \begin{align}
@@ -1055,13 +1055,13 @@ This tells us that the predictive prior term can at best measure the 🥬 diverg
 For the equality cases, we note that:
 
 1. we need a 1:1 mapping between parameters and equivalence classes for the first bound to be tight, and
-2. we need $\Kale{\qof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...,\Y_1\given\x_n,...,\x_1}} \to 0$ for $n \to \infty$ for the second bound to be tight.
+2. we need $$\Kale{\qof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...,\Y_1\given\x_n,...,\x_1}} \to 0$$ for $$n \to \infty$$ for the second bound to be tight.
 
-For **2.**, we know from the chain rule that $\Kale{\qof{\Y_n,...\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...\Y_1\given\x_n,...,\x_1}}$ is monotonically increasing in $n$, and as it is bounded by $\Kale{\qof{[\W]}}{\pof{[\W]}}$ from above, it must converge.
+For **2.**, we know from the chain rule that $$\Kale{\qof{\Y_n,...\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...\Y_1\given\x_n,...,\x_1}}$$ is monotonically increasing in $$n$$, and as it is bounded by $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ from above, it must converge.
 
 To give intuition and without attempting to prove this formally, we can appeal to [*Bernstein von Mises* theorem](https://en.wikipedia.org/wiki/Bernstein%E2%80%93von_Mises_theorem), which states that the posterior distribution of the parameters converges to a Gaussian distribution with mean and variance given by the maximum likelihood estimate (MLE) as the number of samples goes to infinity *as long as the model parameters are identifiable, that is the true parameters we want to learn are unique*:
 
-In the space of equivalence classes given our definitions, the \[MLE\] will be unique by definition and thus the model identifiable, and as the MLE is prior-independent, both $\opq$ and $\opp$ will converge to the MLE. In other words, both $\opq$ and $\opp$ will converge to the same equivalence class, and $\Kale{\qof{[\W]\given \Y..., \x...}}{\pof{[\W] \given \Y..., \x...}} \to 0$ for $n \to \infty$.
+In the space of equivalence classes given our definitions, the \[MLE\] will be unique by definition and thus the model identifiable, and as the MLE is prior-independent, both $$\opq$$ and $$\opp$$ will converge to the MLE. In other words, both $$\opq$$ and $$\opp$$ will converge to the same equivalence class, and $$\Kale{\qof{[\W]\given \Y..., \x...}}{\pof{[\W] \given \Y..., \x...}} \to 0$$ for $$n \to \infty$$.
 Thus, we have:
 
 $$
@@ -1107,13 +1107,13 @@ $$
 \E{\qof{\w}}{-\log \pof{\Dany \given \w}} - \E{\pdata{\x}}{\xHof{\qof{\Y \given \x}}}.
 $$
 
-This is the same as an MLE minimization objective with an additional entropy regularization term $-\xHof{\qof{\Y \given \x}}$ for different $\x$ that prevents the model from overfitting to the labels and collapsing to the one-hot encoding of the labels.
+This is the same as an MLE minimization objective with an additional entropy regularization term $$-\xHof{\qof{\Y \given \x}}$$ for different $$\x$$ that prevents the model from overfitting to the labels and collapsing to the one-hot encoding of the labels.
 
 Thus, in the simplest approximation, the DPI and functional variational inference give us a new perspective on label entropy regularization (and also label noise as I will *shortly* discuss in the next post 🤞).
 
 ## Knowledge Distillation
 
-Obviously, assuming non-uniform prior predictions, $\E{\pdata{\x}}{\Kale{\qof{\Y \given \x}}{\pof{\Y \given \x}}}$ can be related to knowledge distillation in deep neural networks as introduced by Hinton et al. (2015)^[Hinton, Geoffrey, Oriol Vinyals, and Jeff Dean. "Distilling the knowledge in a neural network." NeurIPS Deep Learning Workshop (2015).].
+Obviously, assuming non-uniform prior predictions, $$\E{\pdata{\x}}{\Kale{\qof{\Y \given \x}}{\pof{\Y \given \x}}}$$ can be related to knowledge distillation in deep neural networks as introduced by Hinton et al. (2015)^[Hinton, Geoffrey, Oriol Vinyals, and Jeff Dean. "Distilling the knowledge in a neural network." NeurIPS Deep Learning Workshop (2015).].
 
 The main difference is that knowledge distillation is using the reverse KL divergence instead of the forward KL divergence.
 
